- Fixed registration field filtering dropdown display and spacing

--- a/RockWeb/Themes/Rock/Styles/theme.less
+++ b/RockWeb/Themes/Rock/Styles/theme.less
@@ -517,6 +517,11 @@ td.grid-actions {
 /*#region
 // 4. Theme Styling          */
 // -------------------------
+
+body.nav-open {
+  overflow: hidden;
+}
+
 .page-wrapper {
 
   @media (min-width: @screen-md-min) {
